core-engine/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-engine-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-engine
  template:
    metadata:
      labels:
        app: core-engine
    spec:
      containers:
        - name: core-engine
          image: viniciusmoraodev/core-engine:v1.0.29
          ports:
            - containerPort: 3000
