core-engine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-engine-service
spec:
  type: NodePort
  selector:
    app: core-engine
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31080
